# Code-Completion-Context-Composition

./: .gitignore  README.md  SETUP_COMPLETE.md  challengeDetails.md  clear_checkpoints.py  generate_fresh.py  pyproject.toml
src/: config.py  core.py  utils.py
